client/src/dashboardStyles.css
:root {
  --level-one: translateZ(3rem);
  --level-two: translateZ(6rem);
  --level-three: translateZ(9rem);
  
  --fw-normal: 400;
  --fw-bold: 700;
  
  --clr: #cad3e0;

  --success-green: #198754;
  --spotify-green: #1DB954;
  
  --bg-color-light: #FFFEF2;
  --bg-color-dark: #333;

  --text-color-light: #333;
  --text-color-dark: #fff;

  --line-color-light: #000;
  --line-color-dark: #FFFEF2;

  --card-width: 22rem;
}

body {
  transition: .3s ease;
  height: 100vh;
  display: grid;
  place-items: center;
}

.main {
  background-color: inherit;
}

.user-info {
  padding: 2em;
  background-color: inherit;
}

.user-name {
  display: flex;
  align-items: center;
  font-size: 3rem;
  font-weight: bold;
  color: inherit;
}

.user-image {
  width: 8em;
  transition: .3s ease;
}

.user-image:hover {
  opacity: .5;
  transition: .3s ease;
}

.toggle-theme {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.lines {
  background-color: inherit;
}

.line {
  width: 100%;
  height: 0.1em;
  margin: 0.8em;
}

.list-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  background-color: inherit;
}

.card-deck {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.radio-container {
  display: flex;
  justify-content: space-between;
  margin: 2em 0.5em 2em 0.5em;
}

.radio-button {
  font-size: 1.2em;
  font-weight: bold;
}

.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: inherit;
  font-size: 1.2em;
}

.footer-row {
  margin: 0.5em;
}

.icon-link {
  text-decoration: none;
  color: inherit;
  margin: 1em;
  transition: .3s ease;
}

.icon-link:hover {
  color: var(--success-green);
  transition: .3s ease;
}

input {
  display: none;
}

@media only screen and (max-width: 768px) {
  .toggle-theme {
    position: absolute;
    top: 0;
    left: 8em;
  }
  .radio-container {
    justify-content: center;
    flex-wrap: wrap;
  }

  .radio-button {
    margin: 1em 0 1em 0;
  }
}

/* Card Styles */

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
}

.card {
  min-width: var(--card-width);
  border: none;
  border-radius: 0;
  padding: 0.5em;
  flex: 1;
  background-color: inherit;
}

.card__content {
  text-align: center;
  position: relative;
  padding: 15em 5em;
  transition: transform 2s;
  transform-style: preserve-3d;
}

.card:hover .card__content {
  transform: rotateY(.5turn);
}

.card__front,
.card__back {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 5em 3em;
  backface-visibility: hidden;
  transform-style: preserve-3d;
}

.card__front {
  display: grid;
  align-content: center;
  justify-content: center;
  background-color: var(--clr);
  background-size: cover;
  background-blend-mode: overlay;
  color: black;
}

.card__front::before {
  content: '';
  position: absolute;
  --spacer: 1em;
  top: var(--spacer);
  bottom: var(--spacer);
  left: var(--spacer);
  right: var(--spacer);
  border: 3px solid currentColor;
  transform: var(--level-one);
}

.card__title__artist {
  font-size: 3.5rem;
  transform: var(--level-three);
  order: 2;
  text-transform: uppercase;
  max-width: calc(var(--card-width) * 0.9);
}

.card__title__track {
  font-size: 3rem;
  transform: var(--level-three);
  order: 2;
  text-transform: uppercase;
  max-width: calc(var(--card-width) * 0.9);
}

.card__rank {
  transform: var(--level-two);
  text-transform: uppercase;
  letter-spacing: 4px;
  font-size: 1.5rem;
  font-weight: var(--fw-bold);
  opacity: .7;
}

.card__artist {
  transform: var(--level-two);
  text-transform: uppercase;
  letter-spacing: 4px;
  font-size: 1.5rem;
  font-weight: var(--fw-bold);
  opacity: .7;
}

.card__body {
  transform: var(--level-two);
  font-weight: var(fw-normal);
  font-size: 1.5rem;
  line-height: 1.6;
}

.card__back {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  transform: rotateY(.5turn);
  color: var(--clr);
  background: #474747;
}

.card__back__row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  border-bottom: solid 0.1em var(--clr);
  width: 100%;
}

.card__back__title {
  transform: var(--level-two);
  color: var(--clr);
  font-size: 2em;
}

.card__back__link {
  transform: var(--level-two);
  color: var(--clr);
  transition: .3s ease;
  margin-bottom: 0.8em;
}

.card__back__link:hover {
  opacity: .5;
  color: var(--clr);
  transition: .3s ease;
}

.card__back__genres, .card__back__artists {
  transform: var(--level-two);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.card__back__genre, .card__back__artist {
  background-color: var(--clr);
  color: #333;
  border-radius: 0.25em;
  margin: 0.3em;
  padding: 0.3em 0.5em;
  text-decoration: none;
}

.card__back__genre:hover, .card__back__artist:hover {
  color: var(--success-green);
}

.card__back__stats {
  transform: var(--level-two);
  color: var(--clr);
  font-size: 1em;
}

.card__back__popularity {
  width: 5em;
  transform: var(--level-two);
  font-size: 1em;
  margin-bottom: 0.9em;
}

